modules/dcos_public_agent_group/main.tf
module "agent_public_lb" {
  source = "../dcos_lb"
  env_name = "${var.env_name}"
  name = "dcos-agent-public"
  vpc_id = "${var.vpc_id}"
  network = "${var.network}"
  subnets = "${var.elb_subnets}"
  internal_lb = "${var.internal_lb}"
  default_security_group = "${var.default_security_group}"
}

resource "aws_security_group_rule" "allow_all_http" {
  security_group_id = "${module.agent_public_lb.sec_group}"
  type = "ingress"
  from_port = 80
  to_port = 80
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "allow_all_https" {
  security_group_id = "${module.agent_public_lb.sec_group}"
  type = "ingress"
  from_port = 443
  to_port = 443
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}

module "agent_role" {
  source = "../dcos_agent_role"
  env_name = "${var.env_name}"
  agent_type = "public"
  work_bucket = "${var.work_bucket}"
  work_prefix = "${var.work_prefix}"
}

module "agent_asg" {
  source = "../dcos_asg"
  aws_region = "${var.aws_region}"
  region_azs = "${var.region_azs}"
  vpc_id = "${var.vpc_id}"
  subnets = "${var.instance_subnets}"
  default_security_group = "${var.default_security_group}"

  env_name = "${var.env_name}"
  name = "dcos-public-agent"

  elbs = "${module.agent_public_lb.elb}"
  dcos_role = "slave_public"
  cloud_config_template = "${var.cloud_config_template}"
  dcos_install_url = "${var.dcos_install_url}"

  role_arn = "${module.agent_role.instance_profile_arn}"

  key_name = "${var.key_name}"
  extra_security_groups = "${var.extra_security_groups}"
  coreos_ami = "${var.coreos_ami}"
  instance_type = "${var.instance_type}"
  root_volume_size = "${var.root_volume_size}"
  max_size = "${var.max_size}"
  min_size = "${var.min_size}"
  desired_capacity = "${var.desired_capacity}"
}
